--- Operating System, Graphics card ---
Win XP ATI Radeon 2400
--- Blender version with error, and version that worked ---
r54641
--- Short description of error ---
Applying a Strip Modifier using a Mask "without Convert to Float" results in image that is multiplied to much (burnt out in masked area).
That is, the 8bit sRGB space does not seem to apply the modifier correctly in NON float space.
This does not occur with Blender internal scene strips (using Convert float or Not).
Turning on Convert to Float for strip, fixes this issue BUT Float space is to slow for playback. This bug means that you cannot color correct work in 8bit space for playback.
--- Steps for others to reproduce the error (preferably based on attached .blend file) ---
1. Add an image or Movie (default is 8bit space not float) strip to sequencer timeline
2. Apply a Strip Modifier with any created mask shape eg. curve
3. Alter modifier in some way eg. increase curve gamma
4. mask shape will over expose all mask area by a large factor.
I have attached a .blend but I cannot pack a video or image strip. I have packed an image texture to use if required.
Description
Description