Fix #34439: Strip modifier - Mask multiply failure